fix: modal z-index

--- a/style.css
+++ b/style.css
@@ -438,6 +438,7 @@ footer {
   width: 600px;
   height: 400px;
   border-radius: 30px;
+  z-index: 100;
 }
 
 #modal-content > img {
